--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="source/style.css">
-	<script type="text/javascript" src="source/dragndrop.js"></script>
+	<link rel="stylesheet" type="text/css" href="source/droppable.css">
+	<script type="text/javascript" src="source/droppable.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
 		droppable.config({
@@ -23,8 +23,8 @@
 	</div>
 	<div id="droppable">
 		<div id="previews"></div>
-		<h3 id="droppable_title">Presuňte súbory</h3>
-		<p id="droppable_trigger_input">Kliknite pre výber</p>
+		<h3 id="droppable_title">Sem presuňte súbory</h3>
+		<p id="droppable_trigger_input">Kliknite pre výber súboru</p>
 		<div id="droppable_inputs"></div>
 	</div>
 </body>
